package com.miriam_shmuel.creditapp;

import android.content.Context;
import android.util.AttributeSet;
import android.view.View;

public class ListElement extends View {
    public ListElement(Context context, AttributeSet attrs) {
        super(context, attrs);
    }
}
