@startuml

title __CREDITAPP.APP's Class Diagram__\n

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.AdapterShop {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.AddActivity {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.BuildConfig {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.CreditFragment {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.GiftFragment {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.Gift_Credit {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.HomeActivity {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.ListElement {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.List_of_Credits {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.List_of_Gifts {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.LogInActivity {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.ResetPasswordActivity {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.Shop {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.SignUpActivity {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.User {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.Warranty {
    }
  }
  

  namespace com.miriam_shmuel.creditapp {
    class com.miriam_shmuel.creditapp.WarrantyFragment {
    }
  }
  

  com.miriam_shmuel.creditapp.AdapterShop -up-|> android.widget.ArrayAdapter
  com.miriam_shmuel.creditapp.AddActivity .up.|> android.view.View.OnClickListener
  com.miriam_shmuel.creditapp.AddActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.miriam_shmuel.creditapp.AddActivity o-- com.miriam_shmuel.creditapp.AdapterShop : adapter
  com.miriam_shmuel.creditapp.CreditFragment -up-|> androidx.fragment.app.Fragment
  com.miriam_shmuel.creditapp.GiftFragment -up-|> androidx.fragment.app.Fragment
  com.miriam_shmuel.creditapp.HomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.miriam_shmuel.creditapp.ListElement -up-|> android.view.View
  com.miriam_shmuel.creditapp.LogInActivity -up-|> android.app.Activity
  com.miriam_shmuel.creditapp.ResetPasswordActivity -up-|> android.app.Activity
  com.miriam_shmuel.creditapp.SignUpActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.miriam_shmuel.creditapp.Warranty o-- com.miriam_shmuel.creditapp.Shop : shopName
  com.miriam_shmuel.creditapp.WarrantyFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
